# Purti_EPP_Project

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CITATION  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: __init__.py  final_project.tex  final_project_pres.nav  final_project_pres.snm  final_project_pres.tex  refs.bib  task_paper.py
src/final_project/: __init__.py  config.py  utilities.py
src/final_project/analysis/: __init__.py  model.py  predict.py  task_analysis.py
src/final_project/data/: data.csv  ppath.dta
src/final_project/data_management/: __init__.py  clean_data.py  data_info.yaml  task_data_management.py
src/final_project/final/: __init__.py  plot.py  task_final.py
tests/: __init__.py
tests/analysis/: __init__.py  test_match.csv  test_model.py  test_predict.py
tests/data_management/: Test_fn.csv  __init__.py  data_fixture.csv  data_info_fixture.yaml  test_clean_data.py
